# memory.talk

./: .gitignore  CLAUDE.md  GEMINI.md  README-EN.md  README.md  install.sh  package.json  pyproject.toml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: test.yml
cli/: pyproject.toml
cli-node/: package.json
cli-node/src/: index.ts
cli-node/tests/: cli.test.ts
cli-py/: README.md
cli-py/talk_memory_cli/: __init__.py
cli-py/tests/: test_cli.py
cli/talk_memory_cli/: __main__.py  cli.py
cli/talk_memory_cli/commands/: __init__.py  search.py  serve.py
connectors/: manager.py
connectors/claude-code/: __init__.py  export_sessions.py  list_sessions.py
connectors/mem0/: load.py
connectors/sources/: __init__.py  example.py
docs/: exporter-guide.md
docs/api/: README.md  cards.md  links.md  recall.md  sessions.md  status.md
docs/cli/: README.md  cards.md  link.md  links.md  recall.md  search.md  server.md  session.md  sessions.md
docs/report/: 2026-05-21-search-noisy-or-aggregation-bug.md  2026-05-23-claude-code-adapter-role-misclassification.md  2026-05-23-search-linear-combination-regression.md  2026-05-23-search-vector-index-batch-gap.md
docs/structure/: link.md  session.md  settings.md  talk-card.md
hooks/: hooks-cursor.json  session-start
iterations/round-1/: action.md  plan.md  target.md
iterations/round-2/: action.md  plan.md  target.md
iterations/round-3/: action.md  plan.md  target.md
iterations/round-4/: target.md
memory_talk/: __init__.py  __main__.py  api.py  cli.py  config.py  dsl.py  embedding.py  models.py  server.py  storage.py
memory_talk/adapters/: __init__.py  base.py  claude_code.py  registry.py
memory_talk/api/: __init__.py  conversations.py  ingest.py  search.py  sessions.py  sources.py  status.py  subjects.py
memory_talk/cli/: __init__.py  v1.py  v2.py
memory_talk/commands/: cards.py  explore.py  export.py  links.py  list.py  raw.py  recall.py  search.py  serve.py  sessions.py  setup.py  status.py
memory_talk/models/: __init__.py  api_models.py  card.py  content_block.py  conversation.py  link.py  message.py  round.py  session.py  status.py  subject.py  talk_card.py
memory_talk/service/: __init__.py  cards.py  links.py  rebuild.py  recall.py  search.py  session_text.py  sessions.py  snippet.py  ttl.py
memory_talk/storage/: __init__.py  card_store.py  files.py  init_db.py  interfaces.py  lancedb.py  lancedb_store.py  session_store.py  sqlite.py  sqlite_store.py
memory_talk/v2/: ids.py  logging.py  models.py
memory_talk/web/: __init__.py  app.py
memory_talk_v2/: config.py  dsl.py  embedding.py  ids.py  models.py
memory_talk_v2/api/: __init__.py  cards.py  links.py  log.py  rebuild.py  search.py  sessions.py  status.py  tags.py  view.py
memory_talk_v2/cli/: __init__.py  _format.py  _http.py  _render.py  card.py  link.py  log.py  rebuild.py  search.py  server.py  sync.py  tag.py  view.py
memory_talk_v2/provider/: embedding.py  files.py  jsonl_writer.py
memory_talk_v2/repository/: __init__.py  cards.py  links.py  schema.py  search_log.py  sessions.py  store.py
memory_talk_v2/schemas/: __init__.py  cards.py  links.py  log.py  rebuild.py  search.py  sessions.py  status.py  tags.py  view.py
memory_talk_v2/service/: __init__.py  cards.py  context.py  events.py  links.py  log.py  rebuild.py  search.py  sessions.py  tags.py  view.py
memory_talk_v2/storage/: files.py  jsonl_writer.py  lancedb.py  schema.py  sqlite.py
memory_talk_v2/tests/: conftest.py
memory_talk_v2/util/: snippet.py
memorytalk/: __init__.py  __main__.py  config.py  server.py
memorytalk/adapters/: __init__.py  base.py  claude_code.py  codex.py  openclaw.py
memorytalk/api/: __init__.py  card_sessions.py  cards.py  explores.py  insights.py  links.py  log.py  positions.py  read.py  rebuild.py  recall.py  review.py  reviews.py  search.py  searchbase.py  session_marks.py  sessions.py  status.py  sync.py  tags.py  view.py
memorytalk/cli/: __init__.py  _format.py  _http.py  _mark.py  _render.py  _setup_helpers.py  card.py  explore.py  filter.py  insight.py  link.py  log.py  read.py  rebuild.py  recall.py  review.py  search.py  server.py  session.py  setup.py  sync.py  tag.py  upgrade.py  view.py
memorytalk/hooks/: __init__.py  base.py  claude_code.py  codex.py  materialize.py  probe.py  state.py
memorytalk/migration/: __init__.py  _types.py  discover.py  runner.py  state.py
memorytalk/migrations/: __init__.py
memorytalk/provider/: __init__.py  embedding.py  lancedb.py  storage.py
memorytalk/schemas/: card.py  (+19 more)
scripts/: release.sh
server/: pyproject.toml
server-node/: package.json
server-py/: README.md
server/talk_memory_server/: storage.py
sources/: __init__.py  base.py  manager.py
stories/: claude_code_import.md  main.md
tests/: README.md  conftest.py  test_story_01_database.py  test_story_02_bug.py  test_story_03_recall.py
web/: app.js  index.html  styles.css
(+889 files in other folders)
