[project]
name = "memory-talk"
version = "0.3.0"
description = "Persistent cross-session memory for AI agents via Talk-Card architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.25.0",
    "lancedb>=0.6.0",
    "numpy>=1.24.0",
    "python-ulid>=2.0.0",
    "jieba>=0.42.1",
]

[project.scripts]
memory-talk = "memory_talk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
local = [
    "sentence-transformers>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["memory_talk*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
