[project]
name = "memorytalk"
version = "0.4.0"
description = "Persistent cross-session memory for AI agents via Talk-Card architecture (v2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.25.0",
    "lancedb>=0.6.0",
    "numpy>=1.24.0",
    "python-ulid>=2.0.0",
    "jieba>=0.42.1",
    "pyarrow>=14.0.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
]

[project.scripts]
memory-talk = "memorytalk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]
local = [
    "sentence-transformers>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["memorytalk*"]
exclude = ["memorytalk.tests*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["memorytalk/tests"]
python_files = ["test_*.py", "test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    # TestClient doesn't support per-request timeout, but api() passes one —
    # harmless (in-process calls need no timeout). Keep the prod code simple.
    "ignore:You should not use the 'timeout' argument with the TestClient:DeprecationWarning",
]
